--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,38 @@
 * {
 margin: 0;
 padding: 0;
+
 }
 
-#content-container {
+/* #target-div {
   min-height: 100vh;
   width: 100%;
   background: #ddd;
   padding:1em;
+} */
+
+#content-container {
+  font-family: "Open Sans Condensed", sans-serif;
+  background-color:#DBDBDB ;
+  margin:0 15%;
+  height: 100vh;
+}
+
+#content-container h1 {
+  padding: 30px 10px 10px;
+  margin: 0 20px 20px;
+  color:#CF7500;;
+  text-shadow: 1px 1px 1px #FFFFFF;
+  letter-spacing:1px;
+
+}
+
+#content-container p {
+  margin:0 20px;
+  padding:10px;
+  font-size: 21px;
+}
+
+.first-row {
+  display: block;
 }
